# rules_tf

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: ci.yml  release.yml
tests/bcr/: MODULE.bazel
tests/bcr/tf/: BUILD.bazel
tests/bcr/tf/modules/mod-a/: BUILD.bazel
tests/bcr/tf/modules/multi_provider/: BUILD.bazel
tests/bcr/tf/root-modules/root-mod-a/: BUILD.bazel
tests/bcr/tf/root-modules/root-mod-multi-provider/: BUILD.bazel
tests/bcr/tf/root-modules/root-mod-newrand/: BUILD.bazel  main.tf  outputs.tf  versions.tf.json
tests/bcr_mirror_json/: MODULE.bazel
tests/bcr_mirror_json/tf/: BUILD.bazel  providers.json
tests/bcr_mirror_json/tf/root-modules/root-mod-mirror-json/: BUILD.bazel  main.tf  outputs.tf  versions.tf.json
tf/: BUILD.bazel  def.bzl  extensions.bzl  toolchains.bzl
tf/releasing/: BUILD.bazel  defs.bzl  print_rel_notes.py
tf/rules/: providers.bzl  tf-gen-versions.bzl  tf-lint.bzl  tf-module.bzl
tf/toolchains/: BUILD.bazel  tf_toolchain.bzl  utils.bzl
tf/toolchains/git/: BUILD.bazel
tf/toolchains/terraform/: BUILD.bazel  BUILD.toolchain.tpl  toolchain.bzl
tf/toolchains/tfdoc/: BUILD.bazel
tf/toolchains/tflint/: BUILD.bazel  BUILD.toolchain.tpl  toolchain.bzl  wrapper.sh
tf/toolchains/tofu/: BUILD.toolchain.tpl  toolchain.bzl
