load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:public"],
)

license(
    name = "license",
    license_kinds = [
        "@rules_license//licenses/spdx:Apache-2.0",
    ],
    license_text = "LICENSE",
)

exports_files(
    glob([
        "*.bzl",
    ]),
)

toolchain_type(
   name = "tflint_toolchain_type",
   visibility = ["//visibility:public"],
)

toolchain_type(
   name = "tf_toolchain_type",
   visibility = ["//visibility:public"],
)

toolchain_type(
   name = "tfdoc_toolchain_type",
   visibility = ["//visibility:public"],
)
