package(default_applicable_licenses = ["//:license"])

filegroup(
    name = "standard_package",
    srcs = [
        "BUILD.bazel",
    ] + glob([
        "*.bzl",
    ]),
    visibility = [
        "//tf:__pkg__",
    ],
)

exports_files(
    glob([
        "*.bzl",
    ]),
    visibility = [
        "//tf:__pkg__",
    ],
)
