load("@rules_tf//tf:def.bzl", "tf_module")

tf_module(
    name = "multi_provider",
    providers = {
        "random": {
            "source": "hashicorp/random",
            "version": "3.3.2",
            "configuration_aliases": ["random.primary", "random.secondary"],
        },
    },
    tflint_config = "//tf:tflint-custom-config",
    skip_validation = True,  # Nested module with provider aliases can't be validated standalone
)
