load("@rules_tf//tf:def.bzl", "tf_module")

# Demonstrates mirror_json support: providers are loaded from a JSON file
# instead of being declared inline in MODULE.bazel.
tf_module(
    name = "root-mod-mirror-json",
    providers = {
        "random": "hashicorp/random:3.3.2",
        "null": "hashicorp/null:3.1.1",
    },
    tf_version = ">= 1.9, <= 1.13",
)
